# drf-api-permissions-postgres

./: db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
pgdata/base/1/: 12902  12902_vm  12907_vm  12912_vm  12917  12921  12922_vm  12926  2673  2674  3079  3080  3456_vm  3541_vm  3575  3602_vm  3603  3604  3606  3607  3766  6113
pgdata/base/13066/: 1259  12906  12916  12927  12927_vm  2608_vm  2619  3079_vm  3085  3542  3600  3600_vm  3601_vm  3602  3603_vm  3605  3608  3609
pgdata/base/13067/: 1259  12907  12912  12917_vm  12922  2608  3081  3164  3258  3394  3395  3456  3599  3712  3764  3764_vm  3767  5002  548  549  6111  6117  828  pg_internal.init
pgdata/global/: 1136_vm  1137  1213_vm  1214  1214_vm  1232  1233  1260  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2694  2695  2697  2698  2965  2967  3593  4061  6002  pg_control  pg_internal.init
pgdata/pg_stat/: db_0.stat  db_13067.stat  global.stat
pokemon/: models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
pokemon/migrations/: 0001_initial.py
pokemon_api/: .env  settings.py  urls.py
