[tool.poetry]
name = "drf-api-permissions-postgres"
version = "0.1.0"
description = ""
authors = ["ALAN KARLO MANGUBAT <karlomangubat92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
